# HNode_SensorEndpoint

./: CMakeLists.txt  LICENSE
cmake/Modules/: FindHNREST.cmake
src/: HNode.cpp  HNodeSEPManager.cpp  HNodeSEPManager.hpp  HNodeSEPPacket.cpp  HNodeSEPPacket.hpp  HNodeSEPResource.cpp  HNodeSEPResource.hpp  HNodeSensorMeasurement.cpp  HNodeSensorMeasurement.hpp  hnode_sepd.service
